# advent-of-code

./: advent-of-code.cabal  stack.yaml
.stack-work/install/462e5c81/flag-cache/: advent-of-code-0.1.0.0  byteable-0.1.1-86f7950c2cc69f9e7107760c44236274  cryptohash-0.11.9-dc234bf8d76eaa217c5701a984cc31eb  cryptonite-0.15-0ed24a75a5bf26ce5490a01202374cc4  memory-0.13-bee8816fcf463d0c24e471e697cb9714  parsec-3.1.11-c2bd31daa5db33c2ea3632acaa426a86  raw-strings-qq-1.1-d23d4ef2a83c89c20b96eb6961fb68b7  sparse-lin-alg-0.4.3-097b24916004003ae9dba5fd76d93364
.stack-work/install/462e5c81/lib/x86_64-windows-ghc-7.10.3/sparse-lin-alg-0.4.3-AiU6tJrn45j1L5040tFcOz/Math/LinearAlgebra/: Sparse.hi
.stack-work/install/462e5c81/lib/x86_64-windows-ghc-7.10.3/sparse-lin-alg-0.4.3-AiU6tJrn45j1L5040tFcOz/Math/LinearAlgebra/Sparse/: Algorithms.hi  IntMapUtilities.hi  Matrix.hi  Vector.hi
.stack-work/install/462e5c81/lib/x86_64-windows-ghc-7.10.3/sparse-lin-alg-0.4.3-AiU6tJrn45j1L5040tFcOz/Math/LinearAlgebra/Sparse/Algorithms/: Diagonal.hi  SolveLinear.hi  Staircase.hi
.stack-work/install/462e5c81/pkgdb/: package.cache  sparse-lin-alg-0.4.3-097b24916004003ae9dba5fd76d93364.conf
src/: Day2.hs  Day2PuzzleInput.hs  Day3.hs  Day3PuzzleInput.hs  Day4.hs  Day4PuzzleInput.hs  Day5.hs  Day5PuzzleInput.hs  Day6.hs  Day6PuzzleInput.hs  Day7.hs  Day7PuzzleInput.hs  Main.hs
