name:                advent-of-code
version:             0.1.0.0
synopsis:            Solutions for Advent of Code puzzles
description:         Please see README.md
homepage:            https://github.com/sgajo/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Stiffoni
maintainer:          example@example.com
copyright:           2016 Francesco Stiffoni
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable advent-of-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , raw-strings-qq
                     , parsec
                     , attoparsec
                     , text
                     , bytestring
                     , cryptohash
                     , matrix
                     , sparse-lin-alg
                     , array
